--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ sysinfo.txt
 #.exe
 wherePlatformsAt/.vs/wherePlatformsAt/v15/Server/sqlite3/db.lock
 wherePlatformsAt/Assets/Art.meta
+wherePlatformsAt/ProjectSettings/ProjectVersion.txt
