--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,15 @@ wherePlatformsAt/Assets/Audio/Effects.meta
 wherePlatformsAt/.vs/wherePlatformsAt/v15/Server/sqlite3/storage.ide-wal
 wherePlatformsAt/.vs/wherePlatformsAt/v15/Server/sqlite3/storage.ide-shm
 wherePlatformsAt/.vs/wherePlatformsAt/v15/Server/sqlite3/storage.ide
+wherePlatformsAt/Assets/Prefabs/EnemyBullet.prefab.meta~cfdbefd8054b3f02038824f99c4f81e61aa6cbd7.meta
+wherePlatformsAt/Assets/PostProcessing/Runtime.meta
+wherePlatformsAt/Assets/Audio.meta
+wherePlatformsAt/Assets/Prefabs/EnemyBullet.prefab.meta~HEAD.meta
+wherePlatformsAt/Assets/Prefabs/EnemyBullet.prefab.meta
+wherePlatformsAt/Assets/PostProcessing/Editor.meta
+wherePlatformsAt/Assets/Models/Characters.meta
+wherePlatformsAt/Assets/Fonts.meta
+wherePlatformsAt/Assets/PostProcessing/Utilities.meta
+wherePlatformsAt/Assets/PostProcessing/Editor Resources.meta
+wherePlatformsAt/Assets/PostProcessing/Resources.meta
+wherePlatformsAt/Assets/PostProcessing/Textures.meta
