--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@ wherePlatformsAt/Assets/PostProcessing/Utilities.meta
 wherePlatformsAt/Assets/PostProcessing/Editor Resources.meta
 wherePlatformsAt/Assets/PostProcessing/Resources.meta
 wherePlatformsAt/Assets/PostProcessing/Textures.meta
+wherePlatformsAt/Assets/Models.meta
+wherePlatformsAt/Assets/PostProcessing.meta
