--- a/wherePlatformsAt/Assembly-CSharp.csproj
+++ b/wherePlatformsAt/Assembly-CSharp.csproj
@@ -72,12 +72,15 @@
     <Compile Include="Assets\Scripts\Characters\EnemyScripts\enemyFollowWithinSpecifiedDistance.cs" />
     <Compile Include="Assets\Scripts\Characters\EnemyScripts\enemyPatrol.cs" />
     <Compile Include="Assets\Scripts\Characters\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\LavaBall\LavaBalls.cs" />
+    <Compile Include="Assets\Scripts\LavaBall\LavaBallSpawner.cs" />
     <Compile Include="Assets\Scripts\Lives.cs" />
     <Compile Include="Assets\Scripts\Lose.cs" />
     <Compile Include="Assets\Scripts\pauseMenu.cs" />
     <Compile Include="Assets\Scripts\Platform\AttachToPlatform.cs" />
     <Compile Include="Assets\Scripts\Platform\contactDisappearing.cs" />
     <Compile Include="Assets\Scripts\Platform\disappearing.cs" />
+    <Compile Include="Assets\Scripts\Platform\FlippingPlatform.cs" />
     <Compile Include="Assets\Scripts\Platform\InvisiblePlatformPattern.cs" />
     <Compile Include="Assets\Scripts\Platform\invisiblePlatforms.cs" />
     <Compile Include="Assets\Scripts\Platform\LavaFloor.cs" />
