Enemy Pathfinding & obstacle avoidance

--- a/wherePlatformsAt/Assembly-CSharp.csproj
+++ b/wherePlatformsAt/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Assets\Scripts\Characters\EnemyScripts\EnemyController.cs" />
     <Compile Include="Assets\Scripts\Characters\EnemyScripts\enemyFollowWithinSpecifiedDistance.cs" />
     <Compile Include="Assets\Scripts\Characters\EnemyScripts\enemyPatrol.cs" />
+    <Compile Include="Assets\Scripts\Characters\EnemyScripts\PathFinder.cs" />
     <Compile Include="Assets\Scripts\Characters\PlayerController.cs" />
     <Compile Include="Assets\Scripts\LavaBall\LavaBalls.cs" />
     <Compile Include="Assets\Scripts\LavaBall\LavaBallSpawner.cs" />
