Fixed bug of enemy shooting through walls and added solution for player if respawn is not set for not getting an exception

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ Assets/AssetStoreTools*
 Mono/
 test_Data/
 .vs/
+wherePlatformsAt\Library\CurrentLayout.dwlt
+Library/CurrentLayout.dwlt
 
 # Visual Studio 2015 cache directory
 /.vs/
