changed collectable to effect time

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,6 @@ wherePlatformsAt/Assets/Models.meta
 wherePlatformsAt/Assets/PostProcessing.meta
 wherePlatformsAt/Assets/Scripts/Key.meta
 wherePlatformsAt/Assets/Materials/Scheme.meta
+wherePlatformsAt/Assets/Scenes/Level2.unity
+wherePlatformsAt/Assets/Scenes/Level2.unity
+wherePlatformsAt/Assets/Scenes/Level2.unity
